--- a/9BS_small_train_sub.ipynb
+++ b/9BS_small_train_sub.ipynb
@@ -1120,7 +1120,7 @@
         "id": "XKydRvESYVWo"
       },
       "source": [
-        "# 3. train"
+        "# 3. Train"
       ]
     },
     {
@@ -1129,7 +1129,7 @@
         "id": "QlVw6K7cdpcR"
       },
       "source": [
-        "## 3.1. Load the data"
+        "## 3.1. load the data"
       ]
     },
     {
@@ -1226,7 +1226,7 @@
         "id": "Cd-IiQfAdvUA"
       },
       "source": [
-        "## 3.2. Training"
+        "## 3.2. training"
       ]
     },
     {
