--- a/9BS_small_train.ipynb
+++ b/9BS_small_train.ipynb
@@ -715,14 +715,7 @@
         "        ], dtype=tf.float32)\n",
         "        M_inv_value = tf.linalg.inv(M)\n",
         "\n",
-        "        # Store inverse as a non-trainable weight for saving/loading with the model\n",
-        "        self.M_inv = self.add_weight(\n",
-        "            name=\"M_inv\",\n",
-        "            shape=(7, 7),\n",
-        "            dtype=tf.float32,\n",
-        "            initializer=tf.keras.initializers.Constant(M_inv_value),\n",
-        "            trainable=False\n",
-        "        )\n",
+        "        self.M_inv = M_inv_value\n",
         "\n",
         "    # Define the piecewise polynomial evaluation function inside the layer\n",
         "    @tf.function\n",
@@ -781,7 +774,6 @@
         "        S5 = -144*a5 + 336*a6 - 300*a7 + 108*a8\n",
         "        T5 = 192*a5 - 256*a6 + 208*a7 - 72*a8\n",
         "\n",
-        "        # Common coefficients for x^2, x^1, x^0 terms\n",
         "\n",
         "        x2 = x * x\n",
         "        x3 = x2 * x\n",
