--- a/boolmasks.ipynb
+++ b/boolmasks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4E71rswxgu35j00q2qSj8"
+      "authorship_tag": "ABX9TyPknTCc84y5zNycPo5mph1+"
     },
     "kernelspec": {
       "name": "python3",
@@ -41,7 +41,7 @@
         "    lower_bound=200\n",
         "    upper_bound=255\n",
         "\n",
-        "    # Create an empty mask with 4 channels (B, G, R, and alpha/combined mask)\n",
+        "    # Create an empty mask with 4 channels (B, G, R, and combined mask)\n",
         "    mask = np.zeros((image.shape[0], image.shape[1], image.shape[2] + 1), dtype=np.uint8)\n",
         "\n",
         "    # Create binary masks for each color channel within the specified range\n",
@@ -54,10 +54,10 @@
         "    mask[:,:,1][mask_g > 0] = 1\n",
         "    mask[:,:,2][mask_r > 0] = 1\n",
         "\n",
-        "    # Combine the individual channel masks into the 4th channel (alpha-like mask)\n",
+        "    # Combine the individual channel masks into the 4th channel\n",
         "    mask[:,:,3] = cv2.bitwise_or(cv2.bitwise_or(mask_b, mask_g), mask_r) / 255\n",
         "\n",
-        "    # Save the mask (values are 0 and 1; will appear dark unless scaled)\n",
+        "    # Save the mask\n",
         "    cv2.imwrite(output_path, mask)"
       ],
       "metadata": {
